<resources>
    <string name="app_name">Calendar</string>
    <string name="default_event_name">Название</string>
    <string name="default_event_details">Описание</string>
    <string name="default_event_status">Статус</string>
    <string name="default_event_location">Местоположение</string>
    <string name="default_event_recurrence">Не повторяется</string>
    <string name="default_event_timezone">Часовой пояс</string>
    <string name="search_hint">Поиск</string>
    <string name="timezone_search_hint">Укажите страну или часовой пояс</string>
    <string name="begin_label_name">Начало</string>
    <string name="end_label_name">Конец</string>
    <string name="label_name_prev">Предыдущий</string>
    <string name="label_text_next">Следующий</string>
    <string name="label_event_create">Сохранить</string>
    <string name="label_event_update">Сохранить</string>
    <string name="label_event_delete">Удалить</string>
    <string name="label_event_share">Поделиться</string>
    <string name="today">Сегодня</string>
    <string name="title_fake_event">...</string>
    <string-array name="freq_list">
        <item>Никогда</item>
        <item>Ежедневно</item>
        <item>Еженедельно</item>
        <item>Ежемесячно</item>
        <item>Ежегодно</item>
    </string-array>
    <string-array name="duration_list">
        <item>Бесконечно</item>
        <item>Заданное количество раз</item>
        <item>До</item>
    </string-array>
    <string name="title_choice_update">Сохранить</string>
    <string name="title_choice_delete">Удалить</string>
    <string name="title_pattern">Интервал времени</string>
    <string-array name="choice_variance">
        <item>Это и последующие события</item>
        <item>Все события в последовательности</item>
    </string-array>
    <string-array name="week">
        <item>MO</item>
        <item>TU</item>
        <item>WE</item>
        <item>TH</item>
        <item>FR</item>
        <item>SA</item>
        <item>SU</item>
    </string-array>
</resources>