<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/actionShare"
            android:state_enabled="true"
            android:icon="@drawable/share"
            android:title="@string/label_event_share"
            app:showAsAction="ifRoom"
    />
    <item
            android:id="@+id/actionDelete"
            android:state_enabled="true"
            android:icon="@drawable/trash"
            android:title="@string/label_event_delete"
            app:showAsAction="ifRoom"
    />
    <item
            android:id="@+id/actionSave"
            android:state_enabled="true"
            android:icon="@drawable/save"
            android:title="@string/label_event_update"
            app:showAsAction="ifRoom"
    />
</menu>