<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
>


    <com.example.calendar.customView.DayHourView
            android:id="@+id/vBegin"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="spread"
            android:layout_height="wrap_content"

            app:label_name="@string/begin_label_name"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/vEnd">
    </com.example.calendar.customView.DayHourView>

    <com.example.calendar.customView.DayHourView
            android:id="@+id/vEnd"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="spread"
            android:layout_height="wrap_content"

            app:label_name="@string/end_label_name"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vBegin">
    </com.example.calendar.customView.DayHourView>

    <EditText
            android:id="@+id/etRecurrenceRule"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="spread"
            android:layout_height="wrap_content"

            android:hint="@string/default_event_recurrence"
            android:textSize="20sp"
            android:inputType=""

            app:layout_constraintTop_toBottomOf="@id/vEnd"
            app:layout_constraintBottom_toTopOf="@id/etTimezone"
            app:layout_constraintLeft_toRightOf="@id/ivRecurrenceRule"
            app:layout_constraintRight_toRightOf="parent"
    />

    <ImageView
            android:id="@+id/ivRecurrenceRule"
            android:layout_height="35dp"
            android:layout_width="40dp"
            app:srcCompat="@drawable/repeat"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/etRecurrenceRule"
            app:layout_constraintTop_toTopOf="@+id/etRecurrenceRule"
            app:layout_constraintBottom_toBottomOf="@id/etRecurrenceRule"
    />

    <EditText
            android:id="@+id/etTimezone"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="spread"
            android:layout_height="wrap_content"

            tools:text="GMT+10"
            android:textSize="20sp"
            android:inputType=""

            app:layout_constraintTop_toBottomOf="@id/etRecurrenceRule"
            app:layout_constraintLeft_toRightOf="@id/ivTimezone"
            app:layout_constraintRight_toRightOf="parent"
    />

    <ImageView
            android:id="@+id/ivTimezone"
            android:layout_height="35dp"
            android:layout_width="40dp"
            app:srcCompat="@drawable/planet_earth"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/etTimezone"
            app:layout_constraintTop_toTopOf="@+id/etTimezone"
            app:layout_constraintBottom_toBottomOf="@id/etTimezone"
    />

<!-- todo add exrules -->

</androidx.constraintlayout.widget.ConstraintLayout>